MNEMOSYNE 0.9.5:

*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your
old data as xml. After upgrade, create a new database and import the old data
from the xml file.

-databases can now be moved back and forth between Windows and Unix.


MNEMOSYNE 0.9.4: 2006-06-04

- category names are now sorted alphabetically.
- relative path names now work for multiple img tags in the same string.
  (patch by J. David Lee).
- removed leftover debug code which could cause problems with Unicode 
  items.

MNEMOSYNE 0.9.3: 2006-05-25

- relative paths can now be used in img tags, i.e. <img src="foo/bar.png">
  instead of <img src="/home/johndoe/.mnemosyne/foo/bar.png">. Paths are
  relative to the location of the *.mem file.
- added ability to export to a txt file (only the questions and the 
  answers are exported).
- added locking mechanism which warns you if you start a second
  instance of the program, which could lead to data loss.
- fixed obscure button labelling bug (patch by J. David Lee).

MNEMOSYNE 0.9.2: 2006-03-25

*** IMPORTANT UPGRADE NOTICE ***

This version uses a different database format. Before upgrading, export your 
old data as xml. After upgrade, create a new database and import the old data
from the xml file.
	
- only a limited number of grade 0 items is moved to the learning queue
  at a single time. This is 5 by default, but can be set through the
  configuration screen
- added ability to import from tab separated text files (as exported e.g.
  by Excel)

MNEMOSYNE 0.9.1: 2006-02-09

- fixed bug where an item would get asked twice after editing
- fixed bug when using the popup menu on an empty spot

MNEMOSYNE 0.9: 2006-02-08

- first release of the new core.

PYQT MEMAID 0.2.5: 2005-10-13 

- more bug fixes to work with recent versions of PyQt.
- fix time offset bug when importing XML.

PYQT MEMAID 0.2.4: 2005-09-25

- honor the font setting in the input and edit dialogs.