@@ -27,7 +27,7 @@ items
 
 -best way to selectively increase font size?
 
--newlines in text import/export
+-utf-8 txt import
 
 -website:
   relative layout 
