@@ -6,6 +6,8 @@ This version uses a different database format. Before upgrading, export your
 old data as xml. After upgrade, create a new database and import the old data
 from the xml file.
 
+-items which you forget will no longer be pushed out of the revision queue
+ by items which you still need to leatn.
 -databases can now be moved back and forth between Windows and Unix.
 
 
